# dobot_moveit2

./: README.md  dobot_cr16.urdf  dobot_cr16.urdf.xacro
dobot_bringup/: CMakeLists.txt  package.xml
dobot_bringup/include/dobot_bringup/: commander.hpp  cr16_robot.hpp  tcp_socket.hpp
dobot_bringup/src/: tcp_socket.cpp
dobot_bringup/srv/: Arch.srv  RunScript.srv  SetArmOrientation.srv
dobot_description/: CMakeLists.txt  package.xml
dobot_description/urdf/: dobot.ros2_control.xacro  dobot_cr16.urdf.xacro  dobot_moveit_desc.urdf.xacro
dobot_hardware/: CMakeLists.txt  dobot_hardware.xml  package.xml
dobot_hardware/include/dobot_hardware/: dobot_hardware_interface.hpp
dobot_hardware/src/: dobot_hardware_interface.cpp
dobot_moveit_config/: CMakeLists.txt  package.xml
dobot_moveit_config/config/: dobot_controllers.yaml  dobot_cr16.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros2_controllers.yaml
dobot_moveit_config/launch/: dobot_moveit.launch.py
dobot_moveit_config/rviz/: moveit.rviz
